--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,39 @@
 <resources>
-    <string name="app_name">Presenti</string>
-    <string name="title_activity_mark_attendance">MarkAttendanceActivity</string>
+    <string name="app_name" translatable="false">Presenti</string>
+    <string name="title_activity_mark_attendance" translatable="false">MarkAttendanceActivity</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="base_url" translatable="false">http://api.presenti.lo-yo.in/api/</string>
 
-    <string name="base_url">http://api.presenti.lo-yo.in/api/</string>
+    <string name="nextText">Next</string>
+    <string name="staffLogintText">Staff Login</string>
+    <string name="staffPhoneNumber">Phone Number</string>
+    <string name="continueBtn">Continue</string>
+    <string name="logAttendance">Log Attendance</string>LogIn
+    <string name="logIn">LogIn</string>
+    <string name="lastInTime">Last IN Time</string>
+    <string name="lastOutTime">Last OUT Time</string>
+    <string name="logOut">LogOut</string>
+    <string name="clickHere">Click here to scan QR</string>
+    <string name="remoteLogin">Log Remotely</string>
+    <string name="customerName">Customer Name</string>
+    <string name="mobileNumber">Mobile Number</string>
+    <string name="addNote">Add Note</string>
+    <string name="submit">Submit</string>
+    <string name="note">Note</string>
+    <string name="photo">Photo</string>
+
+    <string name="snackNoteUpdate">Note Updated.</string>
+    <string name="snackNetworkError">Network error. Please check your internet connection.</string>
+    <string name="snackCustomerName">Please enter customer name and phone number.</string>
+    <string name="snackMobileError">Mobile number may not be registered with us. Please contact admin.</string>
+    <string name="snackInvalidEmployee">Invalid employee. Please contact admin.</string>
+    <string name="snackInvalidBusiness">Invalid business. Please contact admin.</string>
+    <string name="snackOutOFBusiness">You are out of business location range limit.</string>
+    <string name="snackLocationError">Can not detect location.Please turn ON your location from settings.</string>
+    <string name="snackdistanceError">Error while getting distance from business.</string>
+    <string name="snackInvalidUser">Invalid user.</string>
+    <string name="snackSuccessful">is Successful</string>
+    <string name="alertCamera">Camera permission needed in order to proceed.You can do it in system settings for Presenti app.</string>
+    <string name="alertLocation">Location permission needed in order to proceed.You can do it in system settings for Presenti app.</string>
 </resources>
