--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,10 @@
     <string name="note">Note</string>
     <string name="photo">Photo</string>
 
-    <string name="snackNoteUpdate">Note Updated.</string>
+    <string name="snackNoteUpdate">Note saved successfully</string>
     <string name="snackNetworkError">Network error. Please check your internet connection.</string>
     <string name="snackCustomerName">Please enter customer name and phone number.</string>
+    <string name="snackCustomerphone">Please enter ten digit phone number.</string>
     <string name="snackMobileError">Mobile number may not be registered with us. Please contact admin.</string>
     <string name="snackInvalidEmployee">Invalid employee. Please contact admin.</string>
     <string name="snackInvalidBusiness">Invalid business. Please contact admin.</string>
@@ -42,4 +43,6 @@
     <string name="languageMarathi">Marathi</string>
     <string name="login">Log In</string>
     <string name="logout">Log Out</string>
+    <string name="alert">Alert</string>
+    <string name="gpsError">Please turn on location services to continue for login.</string>
 </resources>
