--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -28,8 +28,8 @@
     <string name="snackdistanceError">व्यवसाय से दूरी प्राप्त करने में त्रुटि।</string>
     <string name="snackInvalidUser">अमान्य उपयोगकर्ता</string>
     <string name="snackSuccessful">सफल हुआ है</string>
-    <string name="alertCamera">आगे बढ़ने के लिए कैमरा अनुमति की आवश्यकता है। आप इसे Presenti ऐप के लिए सिस्टम सेटिंग्स में कर सकते हैं।</string>
-    <string name="alertLocation">आगे बढ़ने के लिए स्थान अनुमति की आवश्यकता है। आप इसे Presenti ऐप के लिए सिस्टम सेटिंग्स में कर सकते हैं।</string>
+    <string name="alertCamera">आगे बढ़ने के लिए कैमरा अनुमति की आवश्यकता है। कैमरे का उपयोग करके आप लॉगिन और लॉगआउट के लिए बारकोड पढ़ सकते हैं। आप इसे Presenti ऐप के लिए सिस्टम सेटिंग्स में कर सकते हैं।</string>
+    <string name="alertLocation">आगे बढ़ने के लिए स्थान अनुमति की आवश्यकता है। आपकी उपस्थिति को चिह्नित करने के लिए स्थान का उपयोग किया जाता है और हम यह सुनिश्चित कर सकते हैं कि आप व्यावसायिक परिसर में हैं। आप इसे Presenti ऐप के लिए सिस्टम सेटिंग्स में कर सकते हैं।</string>
     <string name="snackSimError">फ़ोन नंबर का पता लगाने में असमर्थ. कृपया सुनिश्चित करें कि सिम ठीक से डाला गया है।</string>
     <string name="languageSelect">भाषा चुने</string>
     <string name="languageHindi">हिन्दी</string>
@@ -39,4 +39,5 @@
     <string name="snackCustomerphone">कृपया दस अंकों का फ़ोन नंबर दर्ज करें।</string>
     <string name="alert">चेतावनी</string>
     <string name="gpsError">लॉगिन जारी रखने के लिए कृपया स्थान सेवाओं को चालू करें।</string>
+    <string name="switchCamera">कैमरा स्विच करें</string>
 </resources>
